--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="index.html" class="logo">Nome da Sua Loja</a>
             <ul>
-                <li><a href="1.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="2.html">Produtos</a></li>
                 <li><a href="3.html">Contato</a></li>
             </ul>
@@ -64,6 +64,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
