--- a/2.html
+++ b/2.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="index.html" class="logo">Chuteira Mania</a>
             <ul>
-                <li><a href="1.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="2.html">Produtos</a></li>
                 <li><a href="3.html">Contato</a></li>
             </ul>
@@ -55,3 +55,4 @@
     </footer>
 </body>
 </html>
+
