--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
             <h2>Nossos Destaques</h2>
             <div class="cards-container">
                 <div class="card">
-                    <img src=" img/Captura de tela 2025-08-22 084152.png" alt="Produto 1">
+                    <img src=" img.png" alt="Produto 1">
                     <h3>Nome do Produto 1</h3>
                     <p>Descrição curta sobre o produto em destaque.</p>
                     <a href="2.html" class="btn-card">Comprar Agora</a>
 
                 </div>
                 <div class="card">
-                    <img src="img/Captura de tela 2025-08-22 084229.png" alt="Produto 2">
+                    <img src="img2.png" alt="Produto 2">
                     <h3>Nome do Produto 2</h3>
                     <p>Descrição curta sobre o produto em destaque.</p>
                     <a href="produtos.html" class="btn-card">Comprar Agora</a>
                 </div>
                 <div class="card">
-                    <img src="img/Captura de tela 2025-08-22 084346.png" alt="Produto 3">
+                    <img src="img3.png" alt="Produto 3">
                     <h3>Nome do Produto 3</h3>
                     <p>Descrição curta sobre o produto em destaque.</p>
                     <a href="produtos.html" class="btn-card">Comprar Agora</a>
@@ -64,6 +64,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
