--- a/2.html
+++ b/2.html
@@ -23,25 +23,25 @@
             <h1>Nossos Produtos</h1>
             <div class="cards-container">
                 <div class="card-produto">
-                    <img src="img/Captura de tela 2025-08-22 085640.png" alt="Chuteira Nike Phantom">
+                    <img src="img4.png" alt="Chuteira Nike Phantom">
                     <h3>Nike Phantom GX</h3>
                     <p class="preco">R$ 599,90</p>
                     <a href="3.html" class="btn-card">Adicionar ao Carrinho</a>
                 </div>
                 <div class="card-produto">
-                    <img src="img/Captura de tela 2025-08-22 085719.png" alt="Chuteira Adidas Copa">
+                    <img src="img5.png" alt="Chuteira Adidas Copa">
                     <h3>Adidas Copa Pure</h3>
                     <p class="preco">R$ 499,90</p>
                     <a href="#" class="btn-card">Adicionar ao Carrinho</a>
                 </div>
                 <div class="card-produto">
-                    <img src="img/Captura de tela 2025-08-22 085754.png" alt="Chuteira Puma King">
+                    <img src="img6.png" alt="Chuteira Puma King">
                     <h3>Puma King Ultimate</h3>
                     <p class="preco">R$ 399,90</p>
                     <a href="#" class="btn-card">Adicionar ao Carrinho</a>
                 </div>
                 <div class="card-produto">
-                    <img src="img/Captura de tela 2025-08-22 085844.png" alt="Chuteira Nike Tiempo">
+                    <img src="img7.png" alt="Chuteira Nike Tiempo">
                     <h3>Nike Tiempo Legend</h3>
                     <p class="preco">R$ 549,90</p>
                     <a href="#" class="btn-card">Adicionar ao Carrinho</a>
@@ -55,4 +55,5 @@
     </footer>
 </body>
 </html>
+
 
